--- a/JavaScript Tutorial.html
+++ b/JavaScript Tutorial.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta chartset="UTF-8">
-        <title>JavaScript Tutorial</title>
+        <title>Learn-JS</title>
         <style>
             body {
                 color:rgb(255, 255, 255);
