Add colored favicon

--- a/learnjs.html
+++ b/learnjs.html
@@ -22,6 +22,7 @@
 					 background-color:rgb(40, 40, 40);
 				}
         </style>
+	<link rel="icon" href="assets/icons8-circle-96.png">
     </head>
     <body>
         <h1>JavaScript Tutorial</h1>
