Updated HTML Course
Fixed a few minor things and added A Update log linkj

--- a/learnhtml.html
+++ b/learnhtml.html
@@ -670,7 +670,7 @@ He was so mad that he was beaten by a 3rd grader</p>
    </p></div>
 	<p>Heres what that would look like:</p>
 	<div class="codeex"><img src="https://caproductions.github.io/home/assets/html/Dog.png" width="100"></div>
-    </div><div id="footer"><p>Big Thanks to <a href="https://pikapower9080.github.io/">Pikapower9080</a> For Teaching Me the Ins and Out's Of HTML, Check them out or i will eat <b>ALL</b> of your cookies.<br><p><a target="_blank" href="https://icons8.com/icon/86796/circle">Circle</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p><br><p>Well, that's all For Now. If you have any ideas for things I could add then <span title="No, My DM's are not open. In Fact I Don't even have any DMs.">my DMs are open</span></p>
+    </div><div id="footer"><p>Big Thanks to <a href="https://pikapower9080.github.io/">Pikapower9080</a> For Teaching Me the Ins and Out's Of HTML, Check them out or i will eat <b>ALL</b> of your cookies.<br><p><a target="_blank" href="https://icons8.com/icon/86796/circle">Circle</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p><br><p>Well, that's all For Now. If you have any ideas for things I could add then <span title="No, My DM's are not open. In Fact I Don't even have any DMs.">my DMs are open</span>. Check the <a href="/home/updateloghtml.html">update log here.</a></p>
 	 </div>
 	  <script>
    $("div#runner").toggle();
