--- a/updateloghtml.html
+++ b/updateloghtml.html
@@ -152,7 +152,14 @@ details > summary::-webkit-details-marker {
 	<li>Fixed Issue Where HTML veiwer would automaticly popup on page loading.</li>
 	<li>Fixed Issue Where Set Page Size Promt Would Take Up Entire Page if using Edge</li>
 	</ul>
-	 
+	    
+	<h2>Jan, 27th 2022</h2>
+	    <ul>
+		    <li>Finally Came back after a long break during the holidays</li>
+		    <li>Made some changes to the Html veiwer</li>
+		    <li>Added help text</li>
+		    <li>Added a summary to the help text and changes 
+	 </ul>
 	 <div id="footer"><p>Big Thanks to <a href="https://pikapower9080.github.io/">Pikapower9080</a> For Teaching Me the Ins and Out's Of HTML, Check them out or i will eat <b>ALL</b> of your cookies.<br><p><a target="_blank" href="https://icons8.com/icon/86796/circle">Circle</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></p><br><p>Well, that's all For Now. If you have any ideas for things I could add then <span title="No, My DM's are not open. In Fact I Don't even have any DMs.">my DMs are open</span>.</p>
 	 </div>
   </body>
