--- a/learnhtml.html
+++ b/learnhtml.html
@@ -471,7 +471,7 @@ He was so mad that he was beaten by a 3rd grader</p>
 	<h3 id="l7">Lesson 7: Other CSS Tags</h3>
 	<p>Background-color and color aren't the only CSS Tags, here is a list of other useful tags for text:</p>
 	<ul>
-	<li>text-size:10px;</li>
+	<li>font-size:10px;</li>
 	<li>text-decoration:underline;</li>
 	<li>text-align:center;</li>
 	<li>font-weight:bold;</li>
