--- a/clicker/clicker.html
+++ b/clicker/clicker.html
@@ -8,7 +8,8 @@
     <script src="assets/script/cookies.js"></script>
     <script src="assets/script/shop.js"></script>
     <script>
-        setInterval(cps, 10), if (localstorage.length>0){loadgame()}, setInterval(updatelocalstorage, 60000)
+        setInterval(cps, 10), if (localstorage.length>0){loadgame()}, setInterval(updatelocalstorage, 60000);
+        setInterval(update, 10)
     </script>
     <style>
         body {
