Small update, mostly replaced the html viewer I also changed clicker.html's name to index.html so you can just do ca.blah/home/clicker Nice clicker btw

--- a/learnjs.html
+++ b/learnjs.html
@@ -32,7 +32,7 @@
     <body>
         <h1>CA - Learn JS</h1>
         <h2>Chapter 1 - The Basics</h2>
-        <p>JavaScript is very different from HTML in amny ways, mainly that it does not use &lt;p&gt; tags, or any others. However, JavaScript does use semicolons after every statement. So, to get started, create a blank HTML file like this:</p>
+        <p>JavaScript is very different from HTML in many ways, mainly that it does not use &lt;p&gt; tags, or any others. Though they are not required, JavaScript does use semicolons after every statement. So, to get started, create a blank HTML file like this:</p>
         <div class="code">
             <p>
                 &lt;!DOCTYPE html&gt; <br>
