--- a/learnhtml.html
+++ b/learnhtml.html
@@ -121,6 +121,11 @@ details > summary::-webkit-details-marker {
   font-size: large;
   border-radius: 5px;
 }
+#viewer{
+   width: 100%;
+   height: 100%;
+   border: none;
+}
         </style>
 		  <link rel="icon" href="assets/main/favicon-96.png">
 
@@ -141,29 +146,16 @@ $(document).ready(function(){
 });
 </script>
 		  <div id="runner" style="width:80%; height:75%; background-color:black; color:white; font-size:15px; position:fixed; top:50%; left:50%; border:8px solid white; border-radius:6px; transform: translate(-50%, -50%); z-index:95; overflow-x:auto;
-                overflow-y:auto;"><div class="body"><p>This Is a HTML Veiwer/compiler I stole from <a href="https://pikapower9080.github.io/">Pikapower9080</a>.<details>
+                overflow-y:auto;"><!--<details>
 	<summary>
 		Need Help?
 	</summary>
 	If you want to use styles,make sure that they are inline styles by using the style attribute.<br> EX: &lt;p style="color:white; font-size:40px; text-decoration:underline;">Very nice text&lt;/p>.<br>
 	When making your own webpage NEVER use inline styles, it really makes it complicated to
 	see and edit your page and makes it harder for other people to help you if you have any issues with CSS or other parts of your page.
-			  </details>  <textarea placeholder="Your html here.. Don't include a body, html, or head tag" id="codeinput">
-
-			  <h1>Check Out <a href="https://pikapower9080.github.io/">Pikapower9080's</a> Coolio Website, YAY!</h1>
-    </textarea>
-    <button onclick="update()" id="runbutton">Run!</button>
-    <hr>
-    <div id="codehere">
-      <h1>Your code will appear here!</h1>
-    </div><script>
-var codeinput = document.getElementById("codeinput")
-var output = document.getElementById("codehere")
-
-function update(){
-  output.innerHTML = codeinput.value
-}
-</script></div> </div>
+			  </details> -->
+           <iframe id="viewer" src="https://pikapower9080.github.io/tools/html-sandbox/"></iframe>
+   </div> </div>
 	 <details class="header" style="background-color:red; position:fixed; right:320px; top:11px; z-index:102; font-size:2em; ">
        <summary>
            <b>Jump To</b>
