Changed the url for the html viewer iframe
Made it a sepcial embedded version :)

--- a/learnhtml.html
+++ b/learnhtml.html
@@ -154,7 +154,7 @@ $(document).ready(function(){
 	When making your own webpage NEVER use inline styles, it really makes it complicated to
 	see and edit your page and makes it harder for other people to help you if you have any issues with CSS or other parts of your page.
 			  </details> -->
-           <iframe id="viewer" src="https://pikapower9080.github.io/tools/html-sandbox/"></iframe>
+           <iframe id="viewer" src="https://pikapower9080.github.io/tools/html-sandbox/embed"></iframe>
    </div> </div>
 	 <details class="header" style="background-color:red; position:fixed; right:320px; top:11px; z-index:102; font-size:2em; ">
        <summary>
